fixed spacing on the sidebar

--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -16,13 +16,14 @@
 
 .sidebar_logo {
     object-fit: contain;
-    height: 70px;
+    height: 80px;
     padding: 10px;
     margin-right: auto;
+    
 }
 
 .sidebar_title {
     margin-left: 10px;
     padding: 5px;
-    font-size: 16px;
+    font-size: 18px;
 }
