--- a/src/SidebarOption.css
+++ b/src/SidebarOption.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     color: grey;
-    height: 40px;
+    height: 45px;
     cursor: pointer;
     transition: 200ms color ease-in;
 }
@@ -12,16 +12,18 @@
 }
 
 .sidebarOption_icon {
-    padding-left: 10px;
-    padding-right: 10px;
-
+    padding-left: 20px;
+    padding-right: 20px;
+    transform: scale(1.5);
 }
 
 .sidebarOption > p {
     margin-top: 10px;
     margin-left: 10px;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 400;
 }
 .sidebarOption > h4 {
-    font-size: 18px;
+    font-size: 22px;
+    font-weight: 600;
 }
